--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@ footer {
 }
 
 .gameWatch {
-    background-image: url("assets/250px-Mr._Game_&_Watch_SSB4.png"); 
+    background-color: white; 
     background-position: center;
 }
 
