--- a/style.css
+++ b/style.css
@@ -1,235 +1,139 @@
 body {
     height: 100vh;
+    padding: 10px;
+    background-color: black;
+}
+
+nav {
+    height: 100%;
     padding: 0px;
-    background-image: url("assets/bckgrnd.png");
-    background-repeat: repeat;
-        
+    padding-bottom: 0px;
+    color: white;
+    display: grid;
+    grid-gap: 3px;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(4, 1fr);
 }
 
 main {
-    display: grid;
     height: 100%;
-    grid-template-rows: repeat(2, 1fr);
-    grid-template-columns: repeat(1, 1fr);
-    grid-gap: 0px;
-    color: white;
-
-}
-.box {
-    grid-row: span 1;
-    grid-column: span 1;
-    color: #ffffff;
-}
-
-.upper {
-    color: #333333;
+    padding: 10px;
     display: grid;
-    grid-template-rows: repeat(2, 1fr);
     grid-template-columns: 1fr;
-    grid-gap: 0px;
+    grid-template-rows: 20px repeat(2, 1fr);
 }
 
-.lower {
-    background-color: rgba(150, 150, 150, .6);
+header {
+    color: black;
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: 1fr;
-    grid-gap: 0px;
-}
-
-#portrait {
-    border: solid;
-    border-width: 3px;
-    border-color: #2c5fa8;
-    border-radius: 100px;
-    width: 200px;
-    height: 100px;
-    grid-row: span 1;
-    grid-column: span 1;
-    background-image: url("assets/20180615_154507.jpg");
-    background-position: center;
-    padding-top: auto;
-    padding-left: auto;
-}
-
-#icons {
-    padding: 10px;   
-    grid-row: span 1;
-    grid-column: span 1;
-}
-
-.portfolio {
-    grid-row: span 1;
-    grid-column: span 1;
-    width: 300px;
-    height: 300px;
-}
-
-h1 {
-    padding-left: 20px;
-    padding-bottom: 10px;
-    font-size: 50px;
-    font-family: 'Montserrat';
-    grid-row: span 1;
-    grid-column: span 1;
-    text-align: center;
-}
-
-h2 {
-    padding-left: 20px;
-    font-size: 40px;
-    font-family: 'Montserrat';
-    font-weight: bold;
-    grid-row: span 1;
-    grid-column: span 1;
-    text-align: center;
-}
-
-h3 {
-    padding-left: 20px;
-    padding-top: 10px;
-    font-size: 30px;
-    font-family: 'Montserrat';
-    display: inline-block;
-    grid-row: span 1;
-    grid-column: span 1;
-}
-
-p {
-    margin-left: 20px;
-    font-size: 20px;
-    font-family: 'Open Sans';
-    grid-row: span 1;
-    grid-column: span 1;       
+    position: static;
+    padding-top: 25px;
+    padding-left: 50px; 
 }
 
 footer {
-    margin-left: 20px;
-    font-size: 10px;
+    color: white;
+    text-align: center;
 }
 
-.arrow {
-    background-image: url("assets/arrow.png");
-    background-position: center;
-    width: 20px;
-    height: 20px;
+.boxHeader {
+    font-family: 'EB Garamond';
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    background-color: white;
+    color: black;
+
 }
 
-.gameWatch {
-    background-color: white; 
-    background-position: center;
-}
-
-
-.falco {
-    background-image: url("assets/d53849bc735b6c6b99f027e13d322102.png");
-    background-position: center; 
-}
-
-.captainFalcon {
-    background-image: url("assets/maxresdefault.jpg");
+.box {
+    height: 250px;
+    background-repeat: no-repeat;
     background-position: center;
 }
 
-img {
-    padding-left: auto;
-    padding-bottom: auto;
+h1 {
+    font-family: 'Oswald';
+    color: white;
 }
 
+h2 {
+    font-family: 'Sonsie One';
+    color: white;
+}
 
-@media only screen and (min-width: 600px)
-{
-    body {
-        height: 100vh;
-        padding: 0px;
-        background-image: url("assets/bckgrnd.png");
-        background-repeat: repeat;
-        
-    }
+h3 {
+    color: white;
+    text-align: center;
+}
 
-    main {
-        display: grid;
-        height: 100%;
-        grid-template-rows: repeat(2, 1fr);
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap: 0px;
+p {
+    border: solid;
+    border-color: white;
+    border-width: 1px;
+    color: white;
+    text-align: center;
+}
+
+.portrait {
+    background-image: url(images/13086700_10208775983175462_7096852271993808909_o.jpg);
+    background-position: center;
+    height: 100%;
+}
+
+.boats {
+    background-image: url(images/github-mark.png);
+    background-position: top;    
+}
+
+.building {
+    background-image: url(images/index.png);
+}
+
+.human {
+    background-image: url(images/cfPdqBP.png);
+}
+
+.tree {
+    background-image: url(images/apple-touch-icon@2.png);
+}
+
+.extra {
+    display: none;
+}
+
+@media only screen and (min-width: 600px) {
+
+    nav {
+        height: unset;
+        padding: 150px;
+        padding-top: 90px;
         color: white;
-    }
-
-    .box {
-        grid-row: span 1;
-        grid-column: span 1;
-        color: #ffffff;
-    }
-
-    #portrait {
-        border: solid;
-        border-width: 3px;
-        border-color: #2c5fa8;
-        border-radius: 100px;
-        width: 200px;
-        position: relative;
-        top: 300px;
-        left: 1200px;
-    }
-
-    .portfolio {
-        width: 200px;
-        margin-left: 200px;
-    }
-
-    .upper {
-        color: #333333;
-    }
-
-    .lower {
-        background-color: rgba(150, 150, 150, .6);
         display: grid;
-        grid-template-rows: 1fr;
-        grid-template-columns: repeat(3, 1fr);
+        grid-gap: 3px;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
     }
 
-    #icons {
-        position: relative;
-        top: -100px;
+    .extra {
+        display: block;
     }
 
-    h1 {
-        padding-left: 20px;
-        padding-bottom: 10px;
-        font-size: 50px;
-        font-family: 'Montserrat';
-        position: relative;
-        top: -100px;
+    .architecture {
+        background-image: url(images/13086700_10208775983175462_7096852271993808909_o.jpg);
     }
 
-    h2 {
-        padding-left: 20px;
-        font-size: 40px;
-        font-family: 'Montserrat';
-        font-weight: bold;
-        position: relative;
-        top: -100px;
+    .sand {
+        background-image: url(images/calenar.png);
     }
 
-    h3 {
-        padding-left: 20px;
-        padding-top: 10px;
-        font-size: 30px;
-        font-family: 'Montserrat';
-        display: inline-block;
+    .bridge {
+        background-image: url(images/facebell.png);
+        background-position: top;
     }
-
-    p {
-        margin-left: 20px;
-        font-size: 20px;
-        font-family: 'Open Sans';
-        position: relative;
-        top: -100px;       
-    }
-
-    footer {
-        margin-left: 20px;
-        font-size: 10px;
+    
+    .camera {
+        background-image: url(images/3655.png);
+        background-position: top;
     }
 }
